fixing desktop spacing

--- a/styles.css
+++ b/styles.css
@@ -3096,7 +3096,9 @@ textarea.w-select {
 }
 
 .customer-feedback {
-    height: 90vh;
+    height: 100vh;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .hero {
@@ -3280,8 +3282,8 @@ textarea.w-select {
 
 .headers {
     text-align: center;
-    padding-top: 7vw;
-    padding-bottom: 3vw;
+    padding-top: 5vh;
+    padding-bottom: 0;
     font-family: Rabie, sans-serif;
     font-size: 3.8vw;
     font-weight: 700;
@@ -3290,7 +3292,7 @@ textarea.w-select {
 
 .image-7 {
     text-align: center;
-    width: 60%;
+    width: 60vw;
     margin-left: auto;
     margin-right: auto;
     padding-left: 40px;
@@ -3303,9 +3305,9 @@ textarea.w-select {
     grid-row-gap: 10vw;
     justify-content: center;
     align-items: center;
-    margin-top: 4vw;
-    margin-bottom: 4vw;
-    padding: 0 10vw;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 4vh 10vw;
     display: flex;
 }
 
@@ -3404,6 +3406,8 @@ textarea.w-select {
     justify-content: center;
     align-items: center;
     height: 90vh;
+    padding-top: 0;
+    padding-bottom: 0;
     display: flex;
 }
 
@@ -3437,7 +3441,11 @@ textarea.w-select {
 }
 
 .div-block-8 {
-    height: 90vh;
+    height: 100vh;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
 }
 
 @media screen and (max-width: 991px) {
